--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,160 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+body{
+  margin:0;
+  height: 100vh;
+  font-size: 2rem;
+  font-family: rubik bubbles;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#root {
+  height: 100%;
+}
+/* layout */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.grid-container{
+  display: grid;
+  grid-template-areas:
+  'header'
+  'main'
+  'footer';
+  grid-template-columns: 1fr;
+  grid-template-rows: 8rem 1fr 8rem;
+  height: 100%;
+}
+
+header{
+  grid-area: header;
+  background-color: #08bdbd;
+ /* box-shadow: 10px 10px 60px #ff9914; */
+
+}
+main {
+  grid-area: main;
+  padding: 1rem
+}
+footer {
+  grid-area: footer;
+  /* background-color: #08bdbd; */
+  color: #abff4f;
+  
+}
+/* common */
+h1{
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+h2{
+  font-size: 1.6rem;
+  padding: 1rem 0;
+  color:#ff9914
+}
+.popcorn{
+  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+  animation: jump-shaking 0.83s infinite;
+ 
+}
+
+a{
+  text-decoration: none;
+  color: #abff4f;
+ 
+}
+
+header a {
+  padding: 1rem;
+}
+.brand{
+  color:#abff4f;
+  font-size: 3rem;
+  font-weight: bold;
+ 
+}
+
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.row.center {
+  justify-content: center;
+}
+.rainbow-4:hover{
+  background-image:     linear-gradient(
+     to right, 
+     #E7484F,
+     #F68B1D, 
+     #FCED00,
+     #009E4F,
+     #00AAC3,
+     #732982
+   );
+ animation:slidebg 2s linear infinite;
+ border-radius: 30px;
+ font-size: 2rem;
+}
+@keyframes slidebg {
+  to {
+    background-position:20vw;
+  }
+}
+
+.follow{
+  margin-top: 40px;
+}
+
+.follow a{
+  color: #f21b3f;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+@keyframes jump-shaking {
+  0% { transform: translateX(0) }
+  25% { transform: translateY(-9px) }
+  35% { transform: translateY(-9px) rotate(17deg) }
+  55% { transform: translateY(-9px) rotate(-17deg) }
+  65% { transform: translateY(-9px) rotate(17deg) }
+  75% { transform: translateY(-9px) rotate(-17deg) }
+  100% { transform: translateY(0) rotate(0) }
+}
+img{
+  border-radius: 0.5rem;
+}
+img.medium {
+  max-width:29rem;
+  width:100%;
+  border-radius:1rem;
+}
+/* card */
+.card:hover {
+  border:0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
+  box-shadow: 10px 10px 60px #29bf12;
+  margin: 3rem;
+  
+}
+.card-body{
+  padding: 1rem;
+
+}
+.card-body > * {
+  margin-bottom: 0.5rem;
+  color:#f21b3f
+}
+.detail{
+  font-size: 2rem;
+}
+/* rating */
+.rating span {
+  color:#f0c040;
+  margin:0.1rem;
 }
