--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,10 +6,11 @@ html{
 body{
   margin:0;
   height: 100vh;
-  font-size: 2rem;
-  font-family: rubik bubbles;
+  font-size: 1rem;
+  font-family:creepster;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #c7ffed;
 }
 #root {
   height: 100%;
@@ -39,7 +40,7 @@ main {
 }
 footer {
   grid-area: footer;
-  /* background-color: #08bdbd; */
+  background-color: #08bdbd;
   color: #abff4f;
   
 }
@@ -51,7 +52,7 @@ h1{
 h2{
   font-size: 1.6rem;
   padding: 1rem 0;
-  color:#ff9914
+  color:#1be7ff
 }
 .popcorn{
   border-radius: 40px;
@@ -72,7 +73,7 @@ header a {
 }
 .brand{
   color:#abff4f;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
  
 }
@@ -111,7 +112,7 @@ header a {
 }
 
 .follow a{
-  color: #f21b3f;
+  color: black;
   padding: 8px 16px;
   text-decoration: none;
 }
@@ -148,7 +149,7 @@ img.medium {
 }
 .card-body > * {
   margin-bottom: 0.5rem;
-  color:#f21b3f
+  color:black;
 }
 .detail{
   font-size: 2rem;
@@ -157,4 +158,153 @@ img.medium {
 .rating span {
   color:#f0c040;
   margin:0.1rem;
+}
+/* welcome/homepage/signIn */
+
+.home-popcorn{
+  height: 20rem;
+  width: 20rem;
+  border-radius:30rem;
+  padding: 3rem;
+  /* animation-name: spin; */
+  animation-duration: 4000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+  animation-name: flip_animation;
+    /* animation-duration: 1s; */
+ 
+}
+.home-card{
+  color: black;
+  font-size: 1.8rem;
+ 
+  border-radius: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin:3rem;
+  border:0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  
+}
+/* .first{
+  animation-duration: 3s;
+  animation-name: slidein;
+} */
+/* .second{
+  padding-left: 5rem;
+} */
+.line {
+  padding: 5rem;
+  width:1rem;
+  height:30rem;
+  background: linear-gradient(to right, 
+                              transparent 0%, 
+                              transparent calc(50% - 0.81px), 
+                              #08bdbd  calc(50% - 0.8px), 
+                              #08bdbd calc(50% + 0.8px), 
+                              transparent calc(50% + 0.81px), 
+                              transparent 100%);
+                               
+}
+/* @keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  75% {
+    font-size: 300%;
+    margin-left: 25%;
+    width: 150%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  } */
+/* } */
+@keyframes flip_animation {
+  from {transform: rotateY(0deg);}
+  to {transform: rotateY(360deg);}
+}
+
+
+
+
+/* CSS */
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
