--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,12 +45,12 @@ footer {
   
 }
 /* common */
-h1{
+/* h1{
   font-size: 1.8rem;
   padding: 1rem 0;
-}
+} */
 h2{
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   padding: 1rem 0;
   color:#1be7ff
 }
@@ -186,6 +186,7 @@ img.medium {
   margin:3rem;
   border:0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
+  box-shadow: 10px 10px 60px #29bf12;
   
 }
 /* .first{
@@ -307,4 +308,19 @@ img.medium {
   left: 0;
   top: 0;
   border-radius: 10px;
+}
+/* about */
+.golden{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding:1rem;
+  font-size: 3rem;
+}
+.ice{
+ padding: 1rem;
+  border-radius: 2rem;
+}
+.about{
+  font-size: 2rem;
 }
