I changed the footer of my website to give more room in the nav/header

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,11 @@ footer {
   color: #abff4f;
   
 }
+.bottom{
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+}
 /* common */
 /* h1{
   font-size: 1.8rem;
