--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -356,8 +356,21 @@ img.medium {
 .success{
   color: #20a020;
 }
-.error{
+.danger{
   color: #a02020;
+}
+.alert{
+  padding : 1 rem;
+  border: 0.1rem solid transparent;
+  border-radius: 0.5rem;
+}
+.alert.info{
+  color:#2020a0;
+  background-color: #ffe0e0e0;
+}
+.alert-danger {
+  color: #a02020;
+  background-color: #ffe0e0e0;
 }
 img.large{
   width: 80%;
